--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Clicker Trial</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body>
-    
+    <span id="score"></span>
+    <button id="mainClicker">ClickMe</button>
+
+    <div id="controllers">
+    <button id="controller-1">0.4</button>
+    <button id="controller-2">2</button>
+    </div>
 </body>
 </html>
