--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <button id="mainClicker">ClickMe</button>
 
     <div id="controllers">
-    <button id="controller-1" class="controller">0.4<span id="con1"></span></button>
-    <button id="controller-2" class="controller">2<span id="con2"></span></button>
+    <button id="controller-1" class="controller">0.4<span class="cont" id="con1"></span></button>
+    <button id="controller-2" class="controller">2<span class="cont" id="con2"></span></button>
     </div>
 </body>
 </html>
