adding third multiplier

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <button id="mainClicker">ClickMe</button>
 
     <div id="controllers">
-    <button id="controller-1" class="controller">0.4<span class="cont" id="con1"></span></button>
-    <button id="controller-2" class="controller">2<span class="cont" id="con2"></span></button>
+    <button id="controller-1" class="controller">0.4<span class="cont" id="con1"></span><span class="prix" id="prix1"></span></button>
+    <button id="controller-2" class="controller">2<span class="cont" id="con2"></span><span class="prix" id="prix2"></span></button>
+    <button id="controller-3" class="controller">4<span class="cont" id="con3"></span><span class="prix" id="prix3"></span></button>
     </div>
 </body>
 </html>
