adding 4th upgrade

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="controller-1" class="controller">0.4<span class="cont" id="con1"></span><span class="prix" id="prix1"></span></button>
     <button id="controller-2" class="controller">2<span class="cont" id="con2"></span><span class="prix" id="prix2"></span></button>
     <button id="controller-3" class="controller">4<span class="cont" id="con3"></span><span class="prix" id="prix3"></span></button>
-    </div>
+    <button id="controller-4" class="controller">8<span class="cont" id="con4"></span><span class="prix" id="prix4"></span></button>
+</div>
 </body>
 </html>
