more style fixes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gumball clicker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/favico.ico.png" type="image/x-icon">
     <script defer src="index.js"></script>
 </head>
 
@@ -16,20 +17,13 @@
     <span id="perSec">0</span>
     <button id="mainClicker"></button>
     </div>
+    <div id="upgrades">
+        <button id="upgrade-1">
+            20%
+        </button>
+    </div>
 
-    <div id="controllers">
-        <button id="controller-1" class="controller"><span class="multname">Gumlins</span><span
-                class="valeur">x 0.4</span><span class="cont" id="con1"></span><span class="prix"
-                id="prix1"></span></button>
-        <button id="controller-2" class="controller"><span class="multname">SuperGumlins</span><span
-                class="valeur">x 2</span><span class="cont" id="con2"></span><span class="prix"
-                id="prix2"></span></button>
-        <button id="controller-3" class="controller"><span class="multname">HyperGumlins</span><span
-                class="valeur">x 4</span><span class="cont" id="con3"></span><span class="prix"
-                id="prix3"></span></button>
-        <button id="controller-4" class="controller"><span class="multname">MetaGumlins</span><span
-                class="valeur">x 8</span><span class="cont" id="con4"></span><span class="prix"
-                id="prix4"></span></button>
+    <div id="shop">
     </div>
 </body>
 
