again these upgrades

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
    <div id="main"><span id="score"></span>
     <span id="perSec">0</span>
     <button id="mainClicker"></button>
-    </div>
+    </div>  <button onclick="resetGame()">Reset</button>
     <div id="upgrades">
-        <button onclick="resetGame()">Reset</button>
+      
     </div>
 
     <div id="shop">
