ask for reset confirmation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div id="main"><span id="score"></span>
     <span id="perSec">0</span>
     <button id="mainClicker"></button>
-    </div>  <button onclick="resetGame()">Reset</button>
+    </div>  <button id="reset" onclick="resetGame()">Reset</button>
     <div id="upgrades">
       
     </div>
