--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
    <div id="main"><span id="score"></span>
     <span id="perSec">0</span>
     <button id="mainClicker"></button>
-    </div>  <button id="reset" onclick="resetGame()">Reset</button>
+    </div> 
+    <button id="reset" onclick="resetGame()">Reset</button>
+    <button id="seeachievements">Achievements</button>
+    <div id="achievements" class="invisible"></div>
     <div id="upgrades">
       
     </div>
