--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <div id="shop">
     </div>
+    <iframe style="display:none" width="420" height="315"
+    src="https://www.youtube.com/embed/MriePJkEays?autoplay=1&loop=1" allow="autoplay">
+    </iframe> 
 </body>
 
 </html>
