breaking it all

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="checkbox">
+        <div id="valeurclic"></div>
+        <div id="valeurbonus"></div>
+    </div>
    <div id="main"><span id="score"></span>
     <span id="perSec">0</span>
     <button id="mainClicker"></button>
@@ -27,7 +31,7 @@
     <div id="shop">
     </div>
     <iframe style="display:none" width="420" height="315"
-    src="https://www.youtube.com/embed/MriePJkEays?autoplay=1&loop=1" allow="autoplay">
+    src="https://www.youtube.com/embed/AXzE5qM6PUc?autoplay=1&loop=1&muted=1" allow="autoplay">
     </iframe> 
 </body>
 
