setting up modules

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Pirate Coins Clicker</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/favico.ico.png" type="image/x-icon">
-    <script defer src="index.js"></script>
+    <script defer type="module" src="index.js"></script>
 </head>
 
 <body>
