it's broken but it's okay

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="valeurbonus"></div>
         </div>
     </div>
-    <button id="reset" onclick="resetGame()">Reset</button>
+    <button id="reset">Reset</button>
     <button id="seeachievements">Achievements</button>
     <div id="achievements" class="invisible"></div>
     <div id="upgrades">
