--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pirate Coins Clicker</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/favico.ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="#" type="image/x-icon">
     <script defer type="module" src="index.js"></script>
 </head>
 
